--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TECHRIM SOLUTIONS LLC</title>
+    <title>TECHRIM SOLUTIONS LTD</title>
     <link rel="stylesheet" type="text/css" href="static/style.css" />
     <link rel="shortcut icon" href="static/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,10 +25,19 @@
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
                         <li class="nav-item">
+                            <a class="nav-link" href="#logosection">Home</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#aboutsection">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#servicesection">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#productsection">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#careersection">Career</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#faqsection">FAQs</a>
@@ -41,24 +50,64 @@
         </nav>
     </header>
 
-    <main>
-        <section id="logosection">
-            <div class="logosection">
-                <div class="container-fluid reveal">
-                    <div class="row row-cols-1 row-cols-md-2 justify-content-center align-items-center">
-                        <div class="col justify-content-center align-items-center">
-                            <h1 class="display-1">Just Imagine!</h1>
-                        </div>
 
-                        <div class="col justify-content-center align-items-center">
-                            <img src="static/images/gray_Lhead_orange_slogan.png" class="img-fluid" alt="logo_icon">
-                        </div>
+    <section id="logosection">
+        <div class="logosection">
+            <div class="container-fluid reveal">
+                <div class="row row-cols-1 row-cols-md-2 g-2 justify-content-center align-items-center">
+                    <div class="col justify-content-center align-items-center">
+                        <h1 class="display-1">Just Imagine!</h1>
+                        <h4 class="fst-italic">...then we customize it to your Desire!</h4>
+                    </div>
+
+                    <div class="col justify-content-center align-items-center">
+                        <img src="static/images/orange_slogan.png" class="img-fluid" alt="logo_icon">
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-    </main>
+    <section id="aboutsection">
+        <div class="aboutsection">
+            <div class="container reveal">
+                <h1 class="display-1">ABOUT US</h1>
+                <hr>
+            </div>
+        </div>
+    </section>
+
+    <section id="servicesection">
+        <div class="servicesection">
+            <div class="container reveal">
+                <h1 class="display-1">Our Services</h1>
+                <hr>
+            </div>
+        </div>
+    </section>
+
+    <section id="productsection">
+        <div class="productsection">
+            <div class="container reveal">
+                <h1 class="display-1">Our Products</h1>
+                <hr>
+            </div>
+        </div>
+    </section>
+
+    <section id="careersection">
+        <div class="careersection">
+            <div class="container reveal">
+                <h1 class="display-1">Careers</h1>
+                <hr>
+            </div>
+        </div>
+    </section>
+
+    <!-- <main> -->
+
+
+    <!-- </main> -->
 
     <!-- <section id="logosection">
         <div class="logosection">
